hide the invite attendee stuff for now

--- a/tictactoe/templates/core/game_list.html
+++ b/tictactoe/templates/core/game_list.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>What would you like to do?<h1>
-    <p>
+    <div class="hide">
         <h3>Invite friend to play.</h3>
         <label for="email">Email Address:<label><input type="input" id="email"></input>
         <input type="button" value="Send Invite"></input>
-    </p>
+    </div>
     <p>
         <h3>Play against the computer.</h3>
         <a href="{% url create_computer_game %}">Start Game</a>
