--- a/tictactoe/templates/base.html
+++ b/tictactoe/templates/base.html
@@ -16,7 +16,7 @@
         <nav id="user-nav">
                 <div id="user-status">
                     {% if user.is_authenticated %}
-                        Welcome, <a href="#">sontek</a> (<a href="{% url logout %}">Logout</a>)
+                    Welcome, {{ user }} (<a href="{% url logout %}">Logout</a>)
                     {% else %}
                         <a href="{% url login %}">Log in</a>
                     {% endif %}
