don't hide the invite section

--- a/tictactoe/templates/core/game_list.html
+++ b/tictactoe/templates/core/game_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>What would you like to do?<h1>
-    <div class="hide">
+    <div>
         <h3>Invite friend to play.</h3>
         <label for="email">Email Address:<label><input type="input" id="email"></input>
         <input type="button" value="Send Invite"></input>
