--- a/tictactoe/templates/core/game_list.html
+++ b/tictactoe/templates/core/game_list.html
@@ -1,15 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>What would you like to do?<h1>
+    <h1>What would you like to do?</h1>
     <div>
         <h3>Invite friend to play.</h3>
-        <label for="email">Email Address:<label><input type="input" id="email"></input>
-        <input type="button" value="Send Invite"></input>
+            {% if form.errors %}
+                <p class="errors">Please correct the errors below: {{ form.non_field_errors }}</p>
+                {{ form.errors }}
+            {% endif %}
+        <form method="POST" action=".">
+            {% csrf_token %}
+            <label for="email">{{ form.email.label }}:</label>{{ form.email }}
+            <input type="submit" value="Send Invite" />
+        </form>
     </div>
-    <p>
+    <div>
         <h3>Play against the computer.</h3>
         <a href="{% url create_computer_game %}">Start Game</a>
-    </p>
+    </div>
 {% endblock %}
 {% block content-related %}
 <div class="box">
