better invite system, don't create the game until they accept

--- a/tictactoe/templates/base.html
+++ b/tictactoe/templates/base.html
@@ -31,6 +31,13 @@
                 {% block content-related %}{% endblock %}
         </div>
         <div id="content">
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
             {% block content %}{% endblock %}
         </div>
         <br class="clear" />
