check for winner

--- a/tictactoe/templates/core/view_game.html
+++ b/tictactoe/templates/core/view_game.html
@@ -5,6 +5,7 @@
         var create_move_url = "{% url create_move game.id %}";
         var player = "{{ player }}";
         var current_player = "{{ current_player }}";
+        var winner = "{{ board.get_winner }}";
     </script>
     <script src="{{ STATIC_URL }}game.js" type="text/javascript"></script>
 
@@ -14,10 +15,14 @@
     <div id="playagain" class="hide">
         <a href="{% url create_computer_game %}">Play Again?</a>
     </div>
-    {% if current_player == player %}
-        Your turn!
+    {% if board.get_winner %}
+        The winner is: {{ board.get_winner }}
     {% else %}
-        Your opponents turn!
+        {% if current_player == player %}
+            Your turn!
+        {% else %}
+            Your opponents turn!
+        {% endif %}
     {% endif %}
     <br class="clear" />
     {% for row in board.pieces %}
