--- a/tictactoe/static/styles.less
+++ b/tictactoe/static/styles.less
@@ -17,11 +17,12 @@ p {
     padding: 5px;
 }
 
-#messages {
+.messages {
     background-color: @top-banner-anchor-color;
     border: solid 1px #000;
     color: #000;
     padding: 5px;
+    width: 80%;
     margin-bottom: 5px;
 }
 
