--- a/tictactoe/templates/core/view_game.html
+++ b/tictactoe/templates/core/view_game.html
@@ -10,20 +10,22 @@
     <script src="{{ STATIC_URL }}game.js" type="text/javascript"></script>
 
     <h1>Have Fun!</h1>
-    <div id="messages" class="hide">
+    <div id="messages" class"messages" class="hide">
     </div>
     <div id="playagain" class="hide">
         <a href="{% url create_computer_game %}">Play Again?</a>
     </div>
-    {% if board.get_winner %}
-        The winner is: {{ board.get_winner }}
-    {% else %}
-        {% if current_player == player %}
-            Your turn!
+    <div class="messages">
+        {% if board.get_winner %}
+            The winner is: {{ board.get_winner }}
         {% else %}
-            Your opponents turn!
+            {% if current_player == player %}
+                Your turn!
+            {% else %}
+                Your opponents turn!
+            {% endif %}
         {% endif %}
-    {% endif %}
+    </div>
     <br class="clear" />
     {% for row in board.pieces %}
         <div class="cell" id="cell{{ forloop.counter0 }}" onclick="MakeMove(this, '{{ forloop.counter0 }}')">
