--- a/tictactoe/templates/core/view_game.html
+++ b/tictactoe/templates/core/view_game.html
@@ -10,12 +10,7 @@
     <script src="{{ STATIC_URL }}game.js" type="text/javascript"></script>
 
     <h1>Have Fun!</h1>
-    <div id="messages" class"messages" class="hide">
-    </div>
-    <div id="playagain" class="hide">
-        <a href="{% url create_computer_game %}">Play Again?</a>
-    </div>
-    <div class="messages">
+    <div id="messages" class="messages">
         {% if board.get_winner %}
             The winner is: {{ board.get_winner }}
         {% else %}
@@ -26,6 +21,11 @@
             {% endif %}
         {% endif %}
     </div>
+
+    <div id="playagain" class="hide">
+        <a href="{% url create_computer_game %}">Play Again?</a>
+    </div>
+
     <br class="clear" />
     {% for row in board.pieces %}
         <div class="cell" id="cell{{ forloop.counter0 }}" onclick="MakeMove(this, '{{ forloop.counter0 }}')">
