--- a/tictactoe/templates/core/view_game.html
+++ b/tictactoe/templates/core/view_game.html
@@ -9,38 +9,9 @@
         var current_player = "{{ current_player }}";
         var winner = "{{ board.get_winner }}";
         var playing_computer = "{{ playing_computer }}";
+        var game_id = {{ game.id }};
 
         var socket = new io.Socket(null, {port: {{ request.environ.SERVER_PORT }}, rememberTransport: false});
-
-        function play_move(obj)
-        {
-            if (obj.message.type == "message") {
-                var channel = obj.message.channel.replace("#", "");
-                if (channel == "{{ game.id }}") {
-                    var data = eval(obj.message.data);
-                    if (data[0] != player) {
-                        $("#cell" + data[1]).html(data[0]);
-                        current_player = player;
-                        SetMessage("Your turn!");
-                    }
-                    else {
-                        current_player = computer;
-                        SetMessage("Your opponents turn!");
-                    }
-                }
-            }
-        }
-
-        if (!playing_computer) {
-            socket.connect();
-
-            socket.on('message', function(obj){
-                play_move(obj);
-            });
-
-            socket.send("subscribe:#{{ game.id }}");
-
-        }
     </script>
 
     <script src="{{ STATIC_URL }}game.js" type="text/javascript"></script>
