link to the home page when a game is over

--- a/tictactoe/templates/core/view_game.html
+++ b/tictactoe/templates/core/view_game.html
@@ -30,7 +30,7 @@
     </div>
 
     <div id="playagain" class="hide">
-        <a href="{% url create_computer_game %}">Play Again?</a>
+        <a href="/">Play Again?</a>
     </div>
 
     <br class="clear" />
