refactored to use redis messaging for everything

--- a/tictactoe/templates/core/game_list.html
+++ b/tictactoe/templates/core/game_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <script src="{{ STATIC_URL }}messages.js" type="text/javascript"></script>
     <h1>What would you like to do?</h1>
     <div>
         <h3>Invite friend to play.</h3>
