--- a/tictactoe/templates/base.html
+++ b/tictactoe/templates/base.html
@@ -2,14 +2,21 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>TicTacToe{% block title%}Welcome!{% endblock %}</title>
+    <title>TicTacToe {% block title%}Welcome!{% endblock %}</title>
     <meta name="description" content="TicTacToe" />
     <link rel="stylesheet" type=text/css href="{{ STATIC_URL }}reset.css">
     <link rel="stylesheet/less" type="text/css" href="{{ STATIC_URL }}styles.less">
 
-    <script src="{{ STATIC_URL }}jquery-1.5.1.min.js"></script>
-    <script src="{{ STATIC_URL }}core.js"></script>
-    <script src="{{ STATIC_URL }}less-1.0.41.min.js"></script>
+    <script src="{{ STATIC_URL }}jquery-1.5.1.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}core.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}less-1.0.41.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}socket.io.js" type="text/javascript"></script>
+    {% if user.is_authenticated %}
+        <script type="text/javascript">
+            var user_id = {{ request.user.id }};
+            var socket = new io.Socket(null, {port: {{ request.environ.SERVER_PORT }}, rememberTransport: false});
+        </script>
+    {% endif %}
 </head>
 <body class="body">
     <div id="banner">
@@ -31,13 +38,16 @@
                 {% block content-related %}{% endblock %}
         </div>
         <div id="content">
-            {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
+            <div id="notifications" class="messages">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <div id="messages" class="messages">
+                {% block messages %}{% endblock %}
+            </div>
             {% block content %}{% endblock %}
         </div>
         <br class="clear" />
