--- a/tictactoe/templates/core/view_game.html
+++ b/tictactoe/templates/core/view_game.html
@@ -1,8 +1,17 @@
 {% extends "base.html" %}
+{% block messages %}
+    {% if board.get_winner %}
+        The winner is: {{ board.get_winner }}
+    {% else %}
+        {% if current_player == player %}
+            Your turn!
+        {% else %}
+            Your opponents turn!
+        {% endif %}
+    {% endif %}
+{% endblock %}
 {% block content %}
     {% load custom_filters %}
-    <script src="http://cdn.socket.io/stable/socket.io.js" type="text/javascript"></script>
-
     <script type="text/javascript">
         var create_move_url = "{% url create_move game.id %}";
         var player = "{{ player }}";
@@ -10,25 +19,11 @@
         var winner = "{{ board.get_winner }}";
         var playing_computer = "{{ playing_computer }}";
         var game_id = {{ game.id }};
-
-        var socket = new io.Socket(null, {port: {{ request.environ.SERVER_PORT }}, rememberTransport: false});
     </script>
 
-    <script src="{{ STATIC_URL }}game.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}messages.js" type="text/javascript"></script>
 
     <h1>Have Fun!</h1>
-    <div id="messages" class="messages">
-        {% if board.get_winner %}
-            The winner is: {{ board.get_winner }}
-        {% else %}
-            {% if current_player == player %}
-                Your turn!
-            {% else %}
-                Your opponents turn!
-            {% endif %}
-        {% endif %}
-    </div>
-
     <div id="playagain" class="hide">
         <a href="/">Play Again?</a>
     </div>
