this version isn't updated to the latest gevent-socketio but this is a step in the right direction

--- a/small_tictactoe/templates/core/view_game.html
+++ b/small_tictactoe/templates/core/view_game.html
@@ -16,7 +16,7 @@
         var game_over = {{ game_over|lower }};
         var create_url = "{% url create_move game_id %}";
 
-        var socket = new io.Socket(null, {port: {{ request.environ.SERVER_PORT }}, rememberTransport: false});
+//        var socket = new io.Socket(null, {port: {{ request.environ.SERVER_PORT }}, rememberTransport: false});
     </script>
     <script type="text/javascript" src="{{ STATIC_URL }}game.js"></script>
     You are: {{ player }}
